--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,9 +52,9 @@
     }
     .nav >h1{
         display: block;
-        font-size: 2.5rem;
+        font-size: 3rem;
         font-weight: bold;
-        color: blue;
+        color: #484798;
     }
     .nav{
         display: flex;
